k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tweetpolite-websocket
spec:
  ports:
    - name: http
      port: 80
  selector:
    app.kubernetes.io/component: websocket
