k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tweetpolite-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - 'ws.tweetpolite.com'
      secretName: certificate-ws-tweetpolite-com
  rules:
    - host: ws.tweetpolite.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tweetpolite-websocket
                port:
                  name: http
